--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-  "name": "haito/kintone-rest-api-client-php",
+  "name": "thecocojp/kintone-rest-api-client-php",
   "description": "Kintone REST API client for PHP generated from OpenAPI specification",
   "type": "library",
   "license": "MIT",
   "authors": [
     {
-      "name": "haito",
-      "email": "haito@example.com"
+      "name": "thecocojp",
+      "email": "thecocojp@example.com"
     }
   ],
   "require": {
