--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -62,18 +62,8 @@ jobs:
       - name: API仕様バージョンを取得
         id: get_api_version
         run: |
-          # rest-api-specディレクトリから最新バージョンを取得
-          if [ -d "rest-api-spec" ]; then
-            API_VERSION=$(find rest-api-spec -maxdepth 1 -type d -name "20*" | sort -r | head -1 | xargs basename 2>/dev/null || echo "")
-          else
-            echo "❌ rest-api-spec ディレクトリが見つかりません"
-            exit 1
-          fi
-          
-          if [ -z "$API_VERSION" ]; then
-            echo "❌ API仕様バージョンが見つかりません"
-            exit 1
-          fi
+          # 実行日時をAPIバージョンとして使用（yyyymmddhhmmss形式）
+          API_VERSION=$(date +%Y%m%d%H%M%S)
           
           echo "api_version=$API_VERSION" >> $GITHUB_OUTPUT
           echo "API仕様バージョン: $API_VERSION"
@@ -164,8 +154,8 @@ jobs:
         run: |
           git commit -m "${{ env.COMMIT_MESSAGE }}"
 
-      - name: タグを作成
-        id: create_tag
+      - name: タグメッセージを準備
+        id: prepare_tag_message
         run: |
           NEW_VERSION="${{ steps.calculate_version.outputs.new_version }}"
           UPDATE_TYPE="${{ steps.calculate_version.outputs.update_type }}"
@@ -192,6 +182,7 @@ jobs:
           echo 'EOF' >> $GITHUB_ENV
 
       - name: タグを作成
+        id: create_tag
         run: |
           NEW_VERSION="${{ steps.calculate_version.outputs.new_version }}"
           TAG_NAME="v$NEW_VERSION"
